@@ -32,6 +32,8 @@ New in v0.7.04 (2015/??/??)
   from Kuang-che Wu to ignore trashed files.
 * Fixed bug 1452263 - par2 option not working on small processors - with patch
   from Kuang-che Wu to ignore default 30 second timeout.
+* Fixed bug 1466160 - pydrive backend is slow to remove old backup set - with
+  patch from Kuang-che Wu to implement _delete_list().
 
 
 New in v0.7.03 (2015/05/11)
